objects/PD_Division__c/PD_Division__c.object-meta.xml
<CustomObject>
    <label>PD Division</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>