objects/PD_Division__c/fields/Corp_City__c.field-meta.xml
<CustomField>
    <fullName>Corp_City__c</fullName>
    <label>Corp City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>