objects/PD_Division__c/fields/Corp_Street__c.field-meta.xml
<CustomField>
    <fullName>Corp_Street__c</fullName>
    <label>Corp Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>