objects/PD_Division__c/fields/Division_Number__c.field-meta.xml
<CustomField>
    <fullName>Division_Number__c</fullName>
    <label>Division Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>