objects/PD_Division__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <label>Salesforce ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>